--- a/index.html
+++ b/index.html
@@ -6,35 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshuas Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
     <div class="header-section">
-        <div class="logo"></div>
-            <p>Header Logo</p>
+        <div class="logo">Header Logo here</div>
         <div class="header-links">
             <ul>
-                <li>header 1</li>
-                <li>header 2</li>
-                <li>header 3</li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
         </div>
     </div>
     <div class="section-1">
-        <div class="left"
-            <div class="title"></div>
+        <div class="left">
+            <div class="hero"> lakjdfhakldfhkalsd </div>
+            <p class="secondary-hero"> alkdjfhkadfhakldhk</p>
+            <button>Sign up</button>
+        </div>
         <img src="" alt="PLACEHOLDER-IMAGE">
     </div>
     <div class="section-2">
+        <h1>Some random information.</h1>
+        <div class="boxes">
+            <div class="one-box">
+                <img class="box" src="" alt="blah">
+                <p class="caption">subtext</p>
+            </div>
+            <div class="one-box">
+                <img class="box" src="" alt="blah">
+                <p class="caption">subtext</p>
+            </div>
+            <div class="one-box">
+                <img class="box" src="" alt="blah">
+                <p class="caption">subtext</p>
+            </div>
+            <div class="one-box">
+                <img class="box" src="" alt="blah">
+                <p class="caption">subtext</p>
+            </div>
 
+        </div>
     </div>
     <div class="section-3">
-
+        <p class="quote">quotey text here</p>
+        <p class="end-quote">-Bob, the builder</p>
     </div>
     <div class="section-4">
-
+        <div class="cta-box">
+            <div>
+                <p class="cta"> CTA Time
+                </p>
+                Sign up info
+            </div>
+            <button class="button, 2">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-
+        <p class="copyright">Copyright C The Odin Project 2021</p>
     </div>
 </body>
 </html>
