Fix style.css components

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="secondary-hero"> alkdjfhkadfhakldhk</p>
             <button>Sign up</button>
         </div>
-        <img src="" alt="PLACEHOLDER-IMAGE">
+        <img class="hero-image" src="" alt="PLACEHOLDER-IMAGE">
     </div>
     <div class="section-2">
         <h1>Some random information.</h1>
@@ -46,7 +46,6 @@
                 <img class="box" src="" alt="blah">
                 <p class="caption">subtext</p>
             </div>
-
         </div>
     </div>
     <div class="section-3">
