--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <div class="section-1">
         <div class="left">
-            <div class="hero"> lakjdfhakldfhkalsd </div>
-            <p class="secondary-hero"> alkdjfhkadfhakldhk</p>
+            <div class="hero"> This Website is Awesome </div>
+            <p class="secondary-hero"> This website has some subtext meant to give some information under the main title. The text is smaller and less bold</p>
             <button>Sign up</button>
         </div>
         <img class="hero-image" src="" alt="PLACEHOLDER-IMAGE">
@@ -31,39 +31,41 @@
         <h1>Some random information.</h1>
         <div class="boxes">
             <div class="one-box">
-                <img class="box" src="" alt="blah">
+                <div class="box" src="" alt="blah"></div>
                 <p class="caption">subtext</p>
             </div>
             <div class="one-box">
-                <img class="box" src="" alt="blah">
+                <div class="box" src="" alt="blah"></div>
                 <p class="caption">subtext</p>
             </div>
             <div class="one-box">
-                <img class="box" src="" alt="blah">
+                <div class="box" src="" alt="blah"></div>
                 <p class="caption">subtext</p>
             </div>
             <div class="one-box">
-                <img class="box" src="" alt="blah">
+                <div class="box" src="" alt="blah"></div>
                 <p class="caption">subtext</p>
             </div>
         </div>
     </div>
     <div class="section-3">
-        <p class="quote">quotey text here</p>
-        <p class="end-quote">-Bob, the builder</p>
+        <p class="quote">“Whatever happens tomorrow, you must promise me one thing. That you will stay who you are, not a perfect soldier, but a good man.”
+
+        </p>
+        <p class="end-quote">-Dr. Abraham Erskine, Captain America: The First Avenger</p>
     </div>
     <div class="section-4">
         <div class="cta-box">
             <div>
-                <p class="cta"> CTA Time
+                <p class="cta"> Call to action! It's Time!
                 </p>
-                Sign up info
+                Sign up for our product by clicking the button! 
             </div>
-            <button class="button, 2">Sign up</button>
+            <button class="booty">Sign up</button>
         </div>
     </div>
     <div class="footer">
-        <p class="copyright">Copyright C The Odin Project 2021</p>
+        <p class="copyright">Copyright © The Odin Project 2021</p>
     </div>
 </body>
 </html>
