--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="logo">Header Logo here</div>
         <div class="header-links">
             <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+                <li class="l1"><a href="">header link one</a></li>
+                <li class="l2"><a href="">header link two</a></li>
+                <li class="l3"><a href="">header link three</a></li>
             </ul>
         </div>
     </div>
@@ -23,9 +23,9 @@
         <div class="left">
             <div class="hero"> This Website is Awesome </div>
             <p class="secondary-hero"> This website has some subtext meant to give some information under the main title. The text is smaller and less bold</p>
-            <button>Sign up</button>
+            <button class="button">Sign up</button>
         </div>
-        <img class="hero-image" src="" alt="PLACEHOLDER-IMAGE">
+        <img class="hero-image" src="awesome.jpg" alt="PLACEHOLDER-IMAGE">
     </div>
     <div class="section-2">
         <h1>Some random information.</h1>
@@ -56,12 +56,12 @@
     </div>
     <div class="section-4">
         <div class="cta-box">
-            <div>
+            <div class="cta-left">
                 <p class="cta"> Call to action! It's Time!
                 </p>
-                Sign up for our product by clicking the button! 
+                <p class="cta-small">Sign up for our product by clicking the button! </p>
             </div>
-            <button class="booty">Sign up</button>
+            <button id="booty" class="button">Sign up</button>
         </div>
     </div>
     <div class="footer">
